--- a/style.css
+++ b/style.css
@@ -1,14 +1,11 @@
 body
 {
   color: white;
-  background: #c0d3ff;
+  background-color: crimson;
 }
 span
 {
   font-size: 30px;
-}
-.heading {
-  font-size: 35px;
 }
 #camera , #result
 {
